--- a/style.css
+++ b/style.css
@@ -1,19 +1,26 @@
 a {
     text-decoration: none;
-    color: blue;
-    border: 1px solid black;
-    background-color: rgb(46, 253, 9);
+    color: rgb(255, 255, 255);
+    border: 1px solid rgb(116, 116, 116);
+    background-color: rgb(9, 196, 253);
     font-size: xx-large;
+    float: right;
+    margin: 10px 5px;
 }
 
 a:hover{
-    color:gold ;
-    font-size: 50px;
+    color:rgb(0, 255, 166) ;
+    font-size: 40px;
     margin: 10px 10px;
 }
 
 .firstlogo{
     background-color: red;
-    width: 3000px;
-    height: 300px;
+    width: 100%;
+    height: 133px;
+}
+
+*{
+    padding: 0;
+    margin: 0;   
 }
