--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ a:hover{
 
 .Workingarea {
     margin-top: 18px;
-    width: 773px;
+    width: 70%;
     height: 100%;
     background-color: lightblue;
     /* border: 1px solid black; */
@@ -63,4 +63,9 @@ a:hover{
 
 i:hover {
     color: white;
+}
+
+.father{
+    width: 100%;
+    height: 100%;
 }
